tests/NormalTests/paczka1/small_fuzzy/15447559.err
Error in line 3: sdzD8 A570 0,8
Error in line 12: f3nDz9 S871 37,8
